--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-
+  <link rel="shortcut icon" href="/public/src/favicon.jpg">
 </head>
 <body>
   <h1>Tasks</h1>
